--- a/src/Styles/ReelSection.css
+++ b/src/Styles/ReelSection.css
@@ -27,7 +27,7 @@
   }
   
   /* Hide the default scrollbar */
-  .react-custom-scrollbars-hide-scroll {
+  /* .react-custom-scrollbars-hide-scroll {
     overflow: hidden !important;
-  }
+  } */
   
